# rust-learn

./: .gitignore  LICENSE  README.md
.trunk/: trunk.yaml
backyard/src/garden/: vegetables.rs
comparing_fn/: Cargo.toml
comparing_fn/src/: main.rs
control_flow/src/: main.rs
data_types/src/: array_panic.rs  main.rs
dioxus-demo-fullstack/: Cargo.toml
dioxus-demo-fullstack/src/: main.rs
dioxus-demo-fullstack/static/favicon.ico/index/: 6527d09f.html
dioxus-web/: Cargo.toml
dioxus-web/src/: main.rs
functions/src/: main.rs
guessing_game/src/: main.rs
ownership/src/: main.rs
variables/src/: main.rs
